--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
     "@nextui-org/react": "^2.4.8",
     "@vercel/speed-insights": "^1.0.14",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.5.6",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.3",
     "next": "14.2.13",
+    "next-auth": "^4.24.10",
+    "next-connect": "^1.0.0",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
